// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtLoadMore Snap render AtLoadMore -- props className 1`] = `
<view
  class="at-load-more test"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props customStyle 1`] = `
<view
  class="at-load-more"
  style="color: red;"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props loadingText 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
  >
    <view
      class="at-activity-indicator__body"
    >
      <view
        class="at-loading"
      >
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
      </view>
    </view>
    <view
      class="at-activity-indicator__content"
    >
      loadingText
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props moreBtnStyle 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
      style="color: red;"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props moreText 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        moreText
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props noMoreText 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__tip"
  >
    noMoreText
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props noMoreTextStyle 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === loading 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
  >
    <view
      class="at-activity-indicator__body"
    >
      <view
        class="at-loading"
      >
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
      </view>
    </view>
    <view
      class="at-activity-indicator__content"
    >
      加载中
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === more 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === noMore 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__tip"
  >
    没有更多
  </view>
</view>
`;

exports[`AtLoadMore Snap render initial AtLoadMore 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="en"
      />
      <view
        class="at-button__text"
      >
        查看更多
      </view>
    </view>
  </view>
</view>
`;
